--- a/roles/glances/templates/glances.conf.j2
+++ b/roles/glances/templates/glances.conf.j2
@@ -284,7 +284,7 @@ port_default_gateway=True
 port_1_host=www.google.com
 port_1_description=Google
 port_1_rtt_warning=200
-#port_2_host={{ rtv_domain }}
+#port_2_host={{ rtv_ddns_domain }}
 #port_2_port={{ rtv_syncthing_port }}
 #port_2_description=Syncthing RTV
 port_3_host={{ rsyno_dsm_domain }}
