Update cadvisor and PSQL version

--- a/roles/cadvisor/templates/cadvisor.service.j2
+++ b/roles/cadvisor/templates/cadvisor.service.j2
@@ -13,7 +13,7 @@ After=docker.service
 Type=simple
 User=root
 ExecStart={{ _cadvisor_binary_install_dir }}/cadvisor \
-  --docker="unix:///var/run/docker.sock" \
+  --docker="unix:///run/docker.sock" \
   --logtostderr=true \
   --docker_only={{ cadvisor_docker_only }} \
   --listen_ip={{ cadvisor_listen_ip }} \
