--- a/roles/systemd/templates/unit.service.j2
+++ b/roles/systemd/templates/unit.service.j2
@@ -15,6 +15,11 @@ After={{ service }}
 Requires={{ service }}
 {% endfor %}
 {% endif %}
+{% if val.extra is defined %}
+{% for k, v in val.extra.items() %}
+{{ k }}={{ v }}
+{% endfor %}
+{% endif %}
 {% endif %}
 
 [Service]
@@ -42,6 +47,11 @@ ExecStart={{ systemd_script_install_path }}/{{ item.name }}
 {% else %}
 {% for es in val.exec_start %}
 ExecStart={{ es }}
+{% endfor %}
+{% endif %}
+{% if val.extra is defined %}
+{% for k, v in val.extra.items() %}
+{{ k }}={{ v }}
 {% endfor %}
 {% endif %}
 {% endif %}
