Set node_exporter prometheus dependency dynamically

--- a/roles/node_exporter/templates/node_exporter.service.j2
+++ b/roles/node_exporter/templates/node_exporter.service.j2
@@ -4,7 +4,7 @@
 Description=Node Exporter
 Requires=network-online.target
 After=network-online.target
-{% if inventory_hostname == "server" %}
+{% if _have_prometheus_service | default(false) %}
 Requires=prometheus.service
 After=prometheus.service
 {% endif %}
