--- a/roles/laptop/templates/logind.conf.j2
+++ b/roles/laptop/templates/logind.conf.j2
@@ -1,6 +1,3 @@
 {{ ansible_managed | comment }}
 [Login]
-HandlePowerKey={{ logind_power }}
-HandleSuspendKey={{ logind_suspend }}
-HandleHibernateKey={{ logind_hibernate }}
-HandleLidSwitch={{ logind_lid_sw }}
+{{ logind_config }}
