--- a/files/ovh-gw01/nginx/netmaker.conf.j2
+++ b/files/ovh-gw01/nginx/netmaker.conf.j2
@@ -10,6 +10,10 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name dashboard.{{ netmaker_domain }};
+
+    access_log {{ nginx_sites_logs }}/dashboard.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
+    error_log {{ nginx_sites_logs }}/dashboard.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
+
     ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
     ssl_dhparam {{ nginx_dhparam }};
@@ -22,6 +26,10 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name api.{{ netmaker_domain }};
+
+    access_log {{ nginx_sites_logs }}/api.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
+    error_log {{ nginx_sites_logs }}/api.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
+
     ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
     ssl_dhparam {{ nginx_dhparam }};
@@ -35,7 +43,12 @@ server {
 
 server {
     listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name grpc.{{ netmaker_domain }};
+
+    access_log {{ nginx_sites_logs }}/grpc.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
+    error_log {{ nginx_sites_logs }}/grpc.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
+
     ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
     ssl_dhparam {{ nginx_dhparam }};
