--- a/files/ovh-gw01/nginx/gitlab.conf.j2
+++ b/files/ovh-gw01/nginx/gitlab.conf.j2
@@ -1,12 +1,20 @@
 {{ ansible_managed | comment }}
 {% if nginx_upstreams | selectattr('name', 'search', 'gitlab') %}
 server {
+    listen 80;
+    listen [::]:80;
+    server_name gitlab.{{ domain }};
+    return 301 https://$host$request_uri;
+}
+
+server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name gitlab.{{ domain }};
 
-    ssl_certificate {{ nginx_ssl_cert_main }};
-    ssl_certificate_key {{ nginx_ssl_key_main }};
+    ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
+    ssl_dhparam {{ nginx_dhparam }};
 
     access_log {{ nginx_sites_logs }}/access-gitlab.{{ domain }}.log {{ nginx_access_log_options }};
     error_log {{ nginx_sites_logs }}/error-gitlab.{{ domain }}.log {{ nginx_error_log_options }};
