--- a/files/ovh-gw01/nginx/netmaker.conf.j2
+++ b/files/ovh-gw01/nginx/netmaker.conf.j2
@@ -2,6 +2,7 @@
 
 server {
     listen 80;
+    listen [::]:80;
     server_name *.{{ netmaker_domain }};
     return 301 https://$host$request_uri;
 }
@@ -11,8 +12,8 @@ server {
     listen [::]:443 ssl;
     server_name dashboard.{{ netmaker_domain }};
 
-    access_log {{ nginx_sites_logs }}/dashboard.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
-    error_log {{ nginx_sites_logs }}/dashboard.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
+    access_log {{ nginx_sites_logs }}/access-dashboard.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
+    error_log {{ nginx_sites_logs }}/error-dashboard.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
 
     ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
@@ -27,8 +28,8 @@ server {
     listen [::]:443 ssl;
     server_name api.{{ netmaker_domain }};
 
-    access_log {{ nginx_sites_logs }}/api.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
-    error_log {{ nginx_sites_logs }}/api.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
+    access_log {{ nginx_sites_logs }}/access-api.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
+    error_log {{ nginx_sites_logs }}/error-api.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
 
     ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
@@ -46,8 +47,8 @@ server {
     listen [::]:443 ssl http2;
     server_name grpc.{{ netmaker_domain }};
 
-    access_log {{ nginx_sites_logs }}/grpc.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
-    error_log {{ nginx_sites_logs }}/grpc.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
+    access_log {{ nginx_sites_logs }}/access-grpc.{{ netmaker_domain }}.log {{ nginx_access_log_options }};
+    error_log {{ nginx_sites_logs }}/error-grpc.{{ netmaker_domain }}.log {{ nginx_error_log_options }};
 
     ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
