--- a/files/dresrv/nginx/main.conf.j2
+++ b/files/dresrv/nginx/main.conf.j2
@@ -69,8 +69,7 @@ server {
     }
 
     location /grafana/ {
-        {# Can't figure out nested hostvars #}
-        return 301 https://grafana.{{ hostvars['webgw01'].domains[1] }};
+        return 301 {{ nginx_grafana_url }};
     }
 
 {% if nginx_upstreams | selectattr('name', 'search', 'notes_web') %}
