Add option to force create truenas share
It appears to be possible to create multiple shares to the same paths if for example one is rw and the other ro.

--- a/roles/truenas_nfs/templates/sharing_config.yml.j2
+++ b/roles/truenas_nfs/templates/sharing_config.yml.j2
@@ -27,7 +27,7 @@
 {%     set create_nfs_paths = [] %}
 {%     set update_nfs_paths = [] %}
 {%     for path in share['config']['paths'] %}
-{%       if path not in existing_nfs_paths %}
+{%       if (path not in existing_nfs_paths) or share.get('force_create', false) %}
 {%         set _ = create_nfs_paths.append(path) %}
 {%       else %}
 {%         set _ = update_nfs_paths.append(path) %}
