--- a/files/dresrv/nginx/gitea.conf.j2
+++ b/files/dresrv/nginx/gitea.conf.j2
@@ -8,15 +8,6 @@ server {
     ssl_certificate {{ nginx_ssl_cert_main }};
     ssl_certificate_key {{ nginx_ssl_key_main }};
 
-    access_log {{ nginx_sites_logs }}/access-git.{{ domain }}.log {{ nginx_access_log_options }};
-    error_log {{ nginx_sites_logs }}/error-git.{{ domain }}.log {{ nginx_error_log_options }};
-
-    location / {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass https://gitea/;
-    }
+    return 301 https://gitlab.{{ domain }}$request_uri;
 }
 {% endif %}
