--- a/files/dresrv/nginx/direct.conf.j2
+++ b/files/dresrv/nginx/direct.conf.j2
@@ -1,4 +1,5 @@
 {{ ansible_managed | comment }}
+{% set ddns_domain = inventory_hostname + '.hlab.no' %}
 server {
     listen 80;
     listen [::]:80;
