--- a/files/webgw/nginx/nextcloud.conf.j2
+++ b/files/webgw/nginx/nextcloud.conf.j2
@@ -1,6 +1,6 @@
 {{ ansible_managed | comment }}
 {% if nginx_upstreams | selectattr('name', 'search', 'nextcloud') %}
-{% set domain = domains[4] %}
+{% set domain = item.domain | default(domains[4]) %}
 server {
     listen 80;
     listen [::]:80;
@@ -54,7 +54,7 @@ server {
         proxy_set_header X-Forwarded-Ssl on;
         proxy_set_header X-Real-IP $remote_addr;
 
-        set $upstream_app nextcloud;
+        set $upstream_app {{ item.upstream_name | default('nextcloud') }};
         set $upstream_proto https;
         proxy_pass $upstream_proto://$upstream_app;
 
