--- a/roles/promtail/templates/promtail.service.j2
+++ b/roles/promtail/templates/promtail.service.j2
@@ -4,18 +4,27 @@ Documentation=https://github.com/grafana/loki/blob/master/docs/promtail.md
 
 [Service]
 Restart=always
-User=root
+User={{ promtail_user }}
 ExecStart=/usr/local/bin/promtail -config.file=/etc/promtail/config.yml
 ExecReload=/bin/kill -HUP $MAINPID
-TimeoutStopSec=20s
-SendSIGKILL=no
-ReadOnlyPaths={{ promtail_read_paths }}
-ReadWritePaths={{ promtail_workdir }}
-PrivateUsers=true
-ProtectControlGroups=true
-ProtectKernelModules=true
-ProtectKernelTunables=true
+
+TimeoutStopSec=30s
+LimitNOFILE=65536
+
+NoNewPrivileges=true
+MemoryDenyWriteExecute=true
+RestrictRealtime=true
+
+ProtectHome=true
 ProtectSystem=strict
+ReadOnlyPaths={{ promtail_read_paths | join(' ') }}
+ReadWritePaths={{ promtail_workdir }}
+PrivateTmp=true
+
+PrivateDevices=true
+ProtectKernelTunables=true
+ProtectKernelModules=true
+ProtectControlGroups=true
 
 [Install]
 WantedBy=multi-user.target
