[promtail] Basic slackware support

--- a/roles/promtail/templates/promtail.service.j2
+++ b/roles/promtail/templates/promtail.service.j2
@@ -5,7 +5,7 @@ Documentation=https://github.com/grafana/loki/blob/master/docs/promtail.md
 [Service]
 Restart=always
 User={{ promtail_user }}
-ExecStart=/usr/local/bin/promtail -config.file=/etc/promtail/config.yml
+ExecStart={{ promtail_bin_path }} -config.file={{ promtail_conf_path }}
 ExecReload=/bin/kill -HUP $MAINPID
 
 TimeoutStopSec=30s
