--- a/roles/ipmi_exporter/templates/ipmi_exporter.service.j2
+++ b/roles/ipmi_exporter/templates/ipmi_exporter.service.j2
@@ -9,7 +9,12 @@ After={{ ipmi_exporter_required_services | join(' ') }}
 Type=simple
 User=ipmi_exporter
 Group=ipmi_exporter
-ExecStart={{ ipmi_exporter_binary_install_dir }}/ipmi_exporter --web.listen-address={{ ipmi_exporter_web_listen_address }} {% if ipmi_exporter_modules | length > 0 %}--config.file={{ ipmi_exporter_config_file }}{% endif +%}
+ExecStart={{ ipmi_exporter_binary_install_dir }}/ipmi_exporter \
+{% if ipmi_exporter_modules | length > 0 %}
+    --config.file={{ ipmi_exporter_config_file }} \
+{% endif %}
+    --web.listen-address={{ ipmi_exporter_web_listen_address }}
+
 Restart=always
 NoNewPrivileges=true
 ProtectHome=true
