--- a/files/webgw/nginx/photoprism.conf.j2
+++ b/files/webgw/nginx/photoprism.conf.j2
@@ -1,6 +1,6 @@
 {{ ansible_managed | comment }}
 {% if nginx_upstreams | selectattr('name', 'search', 'photoprism') %}
-{% set domain = item.domain | default(domains[4]) %}
+{% set domain = item.domain | default(domains['dv']) %}
 server {
     listen 80;
     listen [::]:80;
