--- a/files/dresrv/nginx/main.conf.j2
+++ b/files/dresrv/nginx/main.conf.j2
@@ -26,8 +26,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2 default_server;
-    listen [::]:443 ssl http2 default_server;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name www.{{ domain }};
 
     ssl_certificate {{ nginx_ssl_cert_main }};
