--- a/files/webgw/nginx/jellyfin.conf.j2
+++ b/files/webgw/nginx/jellyfin.conf.j2
@@ -1,5 +1,6 @@
 {{ ansible_managed | comment }}
 {% if nginx_upstreams | selectattr('name', 'search', 'jellyfin') %}
+{% set domain = domains['dv'] %}
 server {
     listen 80;
     listen [::]:80;
@@ -12,8 +13,9 @@ server {
     listen [::]:443 ssl http2;
     server_name jellyfin.{{ domain }};
 
-    ssl_certificate {{ nginx_ssl_cert_main }};
-    ssl_certificate_key {{ nginx_ssl_key_main }};
+    ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
+    ssl_dhparam {{ nginx_dhparam }};
 
     access_log {{ nginx_sites_logs }}/access-jellyfin.{{ domain }}.log {{ nginx_access_log_options }};
     error_log {{ nginx_sites_logs }}/error-jellyfin.{{ domain }}.log {{ nginx_error_log_options }};
