--- a/files/webgw/nginx/grafana.conf.j2
+++ b/files/webgw/nginx/grafana.conf.j2
@@ -25,6 +25,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        # Required to Loki live tail
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
 
         proxy_pass http://grafana/;
     }
