--- a/roles/btrbk/templates/timer_override.conf.j2
+++ b/roles/btrbk/templates/timer_override.conf.j2
@@ -1,9 +1,9 @@
 {{ ansible_managed | comment }}
 
-{% if timer_description is defined %}
+{% if btrbk_timer_description is defined %}
 [Unit]
-Description=btrbk {{ timer_description }} backup
+Description=btrbk {{ btrbk_timer_description }} backup
 {% endif %}
 
 [Timer]
-OnCalendar={{ timer_oncalendar }}
+OnCalendar={{ btrbk_timer_oncalendar }}
