Disable SSL reject on Theia
Incompatible with Ceph RGW as it needs to listen on 443.

--- a/files/webgw/nginx/default_reject.conf.j2
+++ b/files/webgw/nginx/default_reject.conf.j2
@@ -5,9 +5,11 @@ server {
     return      444;
 }
 
+{% if nginx_default_reject_ssl | default(true) %}
 server {
     listen               443 ssl http2 default_server;
     listen               [::]:443 ssl http2 default_server;
     server_name          _;
     ssl_reject_handshake on;
 }
+{% endif %}
