--- a/files/gitlab/gitlab.rb.j2
+++ b/files/gitlab/gitlab.rb.j2
@@ -60,17 +60,31 @@ gitlab_rails['smtp_enable'] = {{ gitlab_smtp_enable }}
 {% if gitlab_smtp_enable == "true" %}
 gitlab_rails['smtp_address'] = '{{ gitlab_smtp_address }}'
 gitlab_rails['smtp_port'] = {{ gitlab_smtp_port }}
-{% if gitlab_smtp_user_name %}
+gitlab_rails['smtp_domain'] = '{{ gitlab_smtp_domain }}'
+{% if gitlab_smtp_authentication | default('') %}
+gitlab_rails['smtp_authentication'] = '{{ gitlab_smtp_authentication }}'
+{% if gitlab_smtp_user_name | default('') %}
 gitlab_rails['smtp_user_name'] = '{{ gitlab_smtp_user_name }}'
 {% endif %}
-{% if gitlab_smtp_password %}
+{% if gitlab_smtp_password | default('') %}
 gitlab_rails['smtp_password'] = '{{ gitlab_smtp_password }}'
 {% endif %}
-gitlab_rails['smtp_domain'] = '{{ gitlab_smtp_domain }}'
-{% if gitlab_smtp_authentication %}
-gitlab_rails['smtp_authentication'] = '{{ gitlab_smtp_authentication }}'
 {% endif %}
+{% if gitlab_smtp_tls | default('') %}
 gitlab_rails['smtp_tls'] = {{ gitlab_smtp_tls }}
+{% endif %}
+{% if gitlab_smtp_ssl | default('') %}
+gitlab_rails['smtp_ssl'] = {{ gitlab_smtp_ssl }}
+{% endif %}
+{% if gitlab_smtp_force_ssl | default('') %}
+gitlab_rails['smtp_force_ssl'] = {{ gitlab_smtp_force_ssl }}
+{% endif %}
+{% if gitlab_smtp_enable_starttls_auto | default('') %}
+gitlab_rails['smtp_enable_starttls_auto'] = {{ gitlab_smtp_enable_starttls_auto }}
+{% endif %}
+{% if gitlab_smtp_openssl_verify_mode | default('') %}
+gitlab_rails['smtp_openssl_verify_mode'] = '{{ gitlab_smtp_openssl_verify_mode }}'
+{% endif %}
 {% endif %}
 
 gitlab_rails['backup_keep_time'] = {{ gitlab_backup_keep_time }}
