--- a/roles/loki/templates/config.yml.j2
+++ b/roles/loki/templates/config.yml.j2
@@ -31,6 +31,7 @@ schema_config:
 
 ruler:
   alertmanager_url: {{ loki_alertmanager_url }}
+  {{ loki_ruler_config | to_nice_yaml(indent=2) | indent(2) }}
 
 {{ loki_extra_config | to_nice_yaml(indent=2) }}
 
