--- a/roles/borg/templates/backup.service.j2
+++ b/roles/borg/templates/backup.service.j2
@@ -1,9 +1,9 @@
 {{ ansible_managed | comment }}
 [Unit]
-Description=Borg backup for {{ item.name }}
+Description=Borg backup for {{ conf.name }}
 
 [Service]
-ExecStart={{ borg_backup_script_path }}/backup-{{ item.name }}
+ExecStart={{ borg_backup_script_path }}/backup-{{ conf.name }}
 
 [Install]
 WantedBy=multi-user.target
